# api

./: .env.template  .gitignore  .pre-commit-config.yaml  COPYRIGHT  Dockerfile  README.md  app.py  bump-release.py  compose.yaml  config.py  config_lambdas.py  db-diagram.dbml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tsdb.json
.github/workflows/: deploy-to-lambda.yml  docker-build.yml  publish-package.yml
data/: client.py  instance.py  models.py  queries.py
nginx/: nginx.local.conf
routes/: sneakers.py
scripts/: set-production-dependencies.sh
src/api/: __init__.py  config.py  db.py  main.py  server.py  sneakers.py  util.py
src/api/data/: instance.py  models.py  queries.py
src/api/models/: __init__.py  auth.py  base.py  enums.py  json.py  misc.py  response.py  sneaker.py  sorting.py  utils.py
src/api/models/misc/: sitemap.py
src/api/models/sneaker/: __init__.py  enums.py  image.py  link.py  price.py  size.py  sneaker.py  sneaker_size_link.py
src/api/routes/: auth.py  sneakers.py
src/api/tasks/: __init__.py  base.py  fix.py  import_from_mongo.py  useragents.py
src/api/tasks/aftermarket/: goat.py  goat_search.json  goat_trending.json  kof.py  sneakercrush.py  snks_drops.py  stadium_goods.py  tsdb.py
src/api/tasks/aftermarket/stockx/: official_api.py  sitemap.py  unofficial_api.py  vlour.py
src/api/tasks/retail/: adidas.py  nike.py  puma.py
src/api/utils/: helpers.py  import-from-mongo.py  proxies.py  sessions.py  time.py
src/api/utils/graphql/: sc_operations.py  sc_schema.py
src/data/: instance.py  models.py
src/solesearch_api/: config.py  db.py  main.py
src/solesearch_api/models/: base.py  enums.py  env.py  image.py  link.py  misc.py  price.py  sneaker.py  sneaker_size.py
src/solesearch_api/routes/: auth.py  sneakers.py  triggers.py
src/solesearch_api/tasks/: __init__.py  base.py
src/solesearch_api/tasks/ingest/: __init__.py  task.py
src/solesearch_api/tasks/ingest/retail/: adidas.py  nike.py
src/solesearch_api/utils/: browser.py  extractors.py  urls.py
utils/: create_schema.sql
