[tool.poetry]
name = "api"
version = "2.0.0"
description = ""
authors = ["Peter Rauscher <peter@peterrauscher.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
fastapi = "^0.112.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
mangum = "^0.17.0"
requests = "^2.32.3"
requests-ratelimiter = "^0.7.0"
sqlmodel = "^0.0.22"
celery = "^5.4.0"
sqlalchemy = "^2.0.32"
free-proxy = "^1.1.1"
sgqlc = "^16.3"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade  
    "S",   # bandit
]
