[tool.poetry]
name = "api"
version = "2.0.0"
description = ""
authors = ["Peter Rauscher <peter@peterrauscher.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "3.12.5"
sqlmodel = "^0.0.22"
fastapi = {extras = ["uvicorn"], version = "^0.115.0"}
uvicorn = "^0.31.0"
psycopg2-binary = "^2.9.9"
motor = "^3.6.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
celery = {extras = ["redis"], version = "^5.4.0"}


[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade  
    "S",   # bandit
]
