[tool.poetry]
name = "solesearch-api"
version = "2.0.0"
description = "API for the solesearch project"
authors = ["Peter Rauscher <peter@peterrauscher.com>"]
readme = "README.md"
packages = [{ include = "solesearch_api", from = "src" }]

[tool.poetry.dependencies]
python = "3.12.8"
sqlmodel = "^0.0.22"
fastapi = { extras = ["uvicorn"], version = "^0.115.0" }
uvicorn = "^0.31.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
requests = "^2.32.3"
fastapi-pagination = "^0.12.31"
celery = "^5.4.0"
redis = "^5.2.0"
logfire = { extras = ["fastapi", "celery", "sqlalchemy"], version = "^3.4.0" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"

[tool.ruff]
select = [
  "E",   # pycodestyle error
  "W",   # pycodestyle warning
  "F",   # pyflakes
  "A",   # flakes8-builtins
  "COM", # flakes8-commas
  "C4",  # flake8-comprehensions
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "I",   # isort
  "N",   # pep8 naming
  "UP",  # pyupgrade  
  "S",   # bandit
]
